ヘッダーとフッターの実装

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>こんにちは</h1>
+    <header class="l-header">
+      <div class="l-header__inner">
+        <figure class="l-header__logo">
+          LOGO
+          <img src="" />
+        </figure>
+        <nav class="l-header__nav">
+          <ul class="l-header__nav-list">
+            <li><a>About</a></li>
+            <li><a>Skills</a></li>
+            <li><a>Products</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- .l-header__inner -->
+    </header>
+
+    <main></main>
+
+    <footer class="l-footer">
+      <div class="l-footer__inner">
+        <p class="l-footer__copy-text">&copy; これはフッターです</p>
+      </div>
+    </footer>
   </body>
 </html>
