[new]スキルアイコンとタイトルコンポーネント

--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
       <!-- .l-header__inner -->
     </header>
 
-    <main></main>
+    <main class="l-main">
+      <div class="c-mainTitle">
+        <h2 class="c-mainTitle__text">About</h2>
+      </div>
+      <!-- .c-mainTitle -->
+
+      <div class="c-skillCard">
+        <p class="c-skillCard__title">HTML</p>
+        <figure class="c-skillCard__img-wrap">
+          <img class="c-skillCard__img" src="/assets/img/icon/html.png" />
+        </figure>
+      </div>
+      <!-- .c-skillCard -->
+      <div class="c-skillCard">
+        <p class="c-skillCard__title">CSS</p>
+        <figure class="c-skillCard__img-wrap">
+          <img class="c-skillCard__img" src="/assets/img/icon/css.png" />
+        </figure>
+      </div>
+      <!-- .c-skillCard -->
+    </main>
 
     <footer class="l-footer">
       <div class="l-footer__inner">
