--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
-  <body>
+  <body class="l-body">
     <header class="l-header">
       <div class="l-header__inner">
         <figure class="l-header__logo">
@@ -28,10 +28,16 @@
         </figure>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
-            <li><a>About</a></li>
-            <li><a>Skills</a></li>
-            <li><a>Products</a></li>
-            <li><a>Contact</a></li>
+            <li class="l-header__nav-list-item"><a href="#about">About</a></li>
+            <li class="l-header__nav-list-item">
+              <a href="#skills">Skills</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="#products">Products</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="#contact">Contact</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -39,13 +45,15 @@
     </header>
 
     <main class="l-main p-index">
-      <div class="p-index-header">
+      <!-- <div class="p-index-header">
         <figure>
-          <img src="https://s3-alpha-sig.figma.com/img/73f0/10d1/8ca5fa7d4cab6751bfeb6321f47016e5?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RTkz6KTzZpoZsYNHQ65ADbIVDI79b99MNZ5i6aR2fJ4n2hrNiG~Dyk7jO9fqKKCBR6J7HhG6kQC315N5W~BYdx47cMlcyGq2VD-y0RHhtfOOrzAXHgYIp3VVKoYFz8rnda2VHzL38DcJy3AD2tFGvZAn7Jri07zKLnufjm2ksOKSZweWMlZ6fBVnJ0HrdQVJiPQzZIn6n-TCl2K0hfNk-iDl317fBvrlExN1y8~906Sgz0snICsi7Cw4yj7ijqaAJBiBOYSmlA2oJhPaCByblOQuVF1mJElK0oy-~JhzZPiA5LY-kK6~cPB1SnGVcCgSza720hOW-HyaQutf7IgqFw__" />
+          <img
+            src="https://s3-alpha-sig.figma.com/img/73f0/10d1/8ca5fa7d4cab6751bfeb6321f47016e5?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RTkz6KTzZpoZsYNHQ65ADbIVDI79b99MNZ5i6aR2fJ4n2hrNiG~Dyk7jO9fqKKCBR6J7HhG6kQC315N5W~BYdx47cMlcyGq2VD-y0RHhtfOOrzAXHgYIp3VVKoYFz8rnda2VHzL38DcJy3AD2tFGvZAn7Jri07zKLnufjm2ksOKSZweWMlZ6fBVnJ0HrdQVJiPQzZIn6n-TCl2K0hfNk-iDl317fBvrlExN1y8~906Sgz0snICsi7Cw4yj7ijqaAJBiBOYSmlA2oJhPaCByblOQuVF1mJElK0oy-~JhzZPiA5LY-kK6~cPB1SnGVcCgSza720hOW-HyaQutf7IgqFw__"
+          />
         </figure>
-      </div>
+      </div> -->
 
-      <section class="l-section p-index-about">
+      <section id="about" class="l-section p-index-about">
         <div class="c-mainTitle">
           <h2 class="c-mainTitle__text">About</h2>
         </div>
@@ -59,14 +67,13 @@
             />
           </figure>
           <div class="p-index-about__profile-text">
+            <p>エンジニアを目指して勉強中の24歳です。</p>
             <p>
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              出身は福島県で、育ちは岩手県、大学時代は宮城県仙台市で過ごしました。新しいことを学ぶことが大好きで、常にわくわくできるものを探しています。
             </p>
             <p>
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-            </p>
-            <p>
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              趣味は書道と展覧会巡り、たくさん食べることです。特にラーメンが大好きで、休日は美術館とラーメン屋を巡ることが多いです。<br />
+              githubとQiitaアカウントあります。気になる方は右のアイコンからどうぞ！
             </p>
           </div>
           <!-- .p-index-about__profile-text -->
@@ -82,7 +89,7 @@
         </figure>
       </section>
 
-      <section class="l-section p-index-skills">
+      <section id="skills" class="l-section p-index-skills">
         <div class="c-mainTitle">
           <h2 class="c-mainTitle__text">Skills</h2>
         </div>
@@ -163,7 +170,7 @@
         <!-- .p-index-skills__cards -->
       </section>
 
-      <section class="l-section p-index-products">
+      <section id="products" class="l-section p-index-products">
         <div class="c-mainTitle">
           <h2 class="c-mainTitle__text">Products</h2>
         </div>
@@ -182,7 +189,7 @@
                   架空のコーポレートサイト
                 </p>
                 <p class="c-productCard__context-skill">
-                  使用技術 : HTML,SCSS,jQuery,PHP
+                  使用技術 : HTML,SCSS,jQuery
                 </p>
               </div>
               <!-- .c-productCard__context -->
@@ -198,8 +205,10 @@
                 />
               </figure>
               <div class="c-productCard__context">
-                <p class="c-productCard__context-title">タイトル</p>
-                <p class="c-productCard__context-skill">技術スタック一覧</p>
+                <p class="c-productCard__context-title">Three.jsで遊ぼう</p>
+                <p class="c-productCard__context-skill">
+                  使用技術 : HTML,CSS,Javascript,Three.js
+                </p>
               </div>
               <!-- .c-productCard__context -->
             </a>
@@ -209,13 +218,79 @@
         <!-- .p-index-products__cards -->
       </section>
 
-      <section class="l-section p-index-contact">
+      <section id="contact" class="l-section p-index-contact">
         <div class="c-mainTitle">
           <h2 class="c-mainTitle__text">Contact</h2>
         </div>
+
+        <form
+          action="https://ssl.form-mailer.jp/fm/service/Forms/confirm"
+          method="post"
+          class="p-form"
+          name="form1"
+          enctype="multipart/form-data"
+          accept-charset="UTF-8"
+        >
+          <input type="hidden" name="key" value="0c1e04d5816435" />
+
+          <p>お問い合わせの際にはフォームよりご連絡ください。</p>
+          <p><span>*</span>は必須項目です</p>
+
+          <!-- name -->
+          <p><span>*</span>名前</p>
+          <div class="p-form__names">
+            <p>
+              <input
+                class="p-form__name"
+                name="field_7131055_sei"
+                type="text"
+                placeholder="姓"
+              />
+              <input
+                class="p-form__name"
+                name="field_7131055_mei"
+                type="text"
+                placeholder="名"
+              />
+            </p>
+          </div>
+          <!-- email -->
+          <p><span>*</span>メールアドレス</p>
+          <p>
+            <input
+              name="field_7131056"
+              type="email"
+              size="30"
+              placeholder="info@example.com"
+            />
+          </p>
+
+          <!-- textarea -->
+          <p><span>*</span>お問い合わせ内容</p>
+          <p>
+            <textarea
+              name="field_7131065"
+              cols="30"
+              rows="5"
+              placeholder="お問い合わせ内容を入力してください"
+            ></textarea>
+          </p>
+
+          <p class="p-form__button">
+            <input
+              class="c-button"
+              name="submit"
+              type="submit"
+              value="確認画面へ"
+            />
+          </p>
+
+          <input type="hidden" name="code" value="utf8" />
+        </form>
+
         <div class="p-index-contact__context">
           <p>
-            お問い合わせは以下のメールアドレスまでご連絡をお願いいたします。
+            お問い合わせフォームに不具合がある場合には、お手数ですが以下のメールアドレスまでご連絡をお願いいたします。
           </p>
           <p class="p-index-contact__context-mail">
             mail: k.hirono0127@gmail.com
@@ -223,10 +298,9 @@
         </div>
       </section>
     </main>
-
     <footer class="l-footer">
       <div class="l-footer__inner">
-        <p class="l-footer__copy-text">&copy; これはフッターです</p>
+        <p class="l-footer__copy-text">&copy; 2024 Portfolio by hirono</p>
       </div>
     </footer>
   </body>
