[new]ヘッダー画像の追加

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
   <body class="l-body">
     <header class="l-header">
       <div class="l-header__inner">
-        <figure class="l-header__logo">
-          LOGO
-          <img src="" />
-        </figure>
+        <a href="/" class="l-header__logo">Portfolio</a>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
             <li class="l-header__nav-list-item"><a href="#about">About</a></li>
@@ -45,13 +42,11 @@
     </header>
 
     <main class="l-main p-index">
-      <!-- <div class="p-index-header">
-        <figure>
-          <img
-            src="https://s3-alpha-sig.figma.com/img/73f0/10d1/8ca5fa7d4cab6751bfeb6321f47016e5?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=RTkz6KTzZpoZsYNHQ65ADbIVDI79b99MNZ5i6aR2fJ4n2hrNiG~Dyk7jO9fqKKCBR6J7HhG6kQC315N5W~BYdx47cMlcyGq2VD-y0RHhtfOOrzAXHgYIp3VVKoYFz8rnda2VHzL38DcJy3AD2tFGvZAn7Jri07zKLnufjm2ksOKSZweWMlZ6fBVnJ0HrdQVJiPQzZIn6n-TCl2K0hfNk-iDl317fBvrlExN1y8~906Sgz0snICsi7Cw4yj7ijqaAJBiBOYSmlA2oJhPaCByblOQuVF1mJElK0oy-~JhzZPiA5LY-kK6~cPB1SnGVcCgSza720hOW-HyaQutf7IgqFw__"
-          />
+      <div class="p-index-header">
+        <figure class="p-index-header__img">
+          <img src="/assets/img/images/header-bg.png" />
         </figure>
-      </div> -->
+      </div>
 
       <section id="about" class="l-section p-index-about">
         <div class="c-mainTitle">
@@ -224,9 +219,7 @@
               </figure>
               <div class="c-productCard__context">
                 <p class="c-productCard__context-title">Coming soon...</p>
-                <p class="c-productCard__context-skill">
-                  使用技術 : ???
-                </p>
+                <p class="c-productCard__context-skill">使用技術 : ???</p>
               </div>
               <!-- .c-productCard__context -->
             </a>
@@ -299,7 +292,7 @@
               class="c-button"
               name="submit"
               type="submit"
-              value="確認画面へ"
+              value="送信する"
             />
           </p>
 
@@ -318,7 +311,7 @@
     </main>
     <footer class="l-footer">
       <div class="l-footer__inner">
-        <p class="l-footer__copy-text">&copy; 2024 Portfolio by hirono</p>
+        <p class="l-footer__copy-text">&copy; 2024 Portfolio by kobari</p>
       </div>
     </footer>
   </body>
