[new]カラーの変更とロゴ設定

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body class="l-body">
     <header class="l-header">
       <div class="l-header__inner">
-        <a href="/" class="l-header__logo">Portfolio</a>
+        <a href="/" class="l-header__logo">
+          <img src="/assets/img/logo/logo.png" />
+        </a>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
             <li class="l-header__nav-list-item"><a href="#about">About</a></li>
@@ -218,8 +220,8 @@
                 />
               </figure>
               <div class="c-productCard__context">
-                <p class="c-productCard__context-title">Coming soon...</p>
-                <p class="c-productCard__context-skill">使用技術 : ???</p>
+                <p class="c-productCard__context-title">My 図書管理アプリ</p>
+                <p class="c-productCard__context-skill">使用技術 : HTML,MUI,Next.js,supabase,Vercel</p>
               </div>
               <!-- .c-productCard__context -->
             </a>
