[new]デザインの修正をもとにした初期ファイル設定と不要素材の削除

--- a/index.html
+++ b/index.html
@@ -6,231 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/assets/img/icon/icon.png"
-      sizes="192x192"
-    />
+    <link rel="icon" type="image/png" href="" sizes="192x192" />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
   <body class="l-body">
-    <header class="l-header">
-      <div class="l-header__inner">
-        <a href="/" class="l-header__logo">
-          <img src="/assets/img/logo/logo.png" />
-        </a>
-        <nav class="l-header__nav">
-          <ul class="l-header__nav-list">
-            <li class="l-header__nav-list-item"><a href="#about">About</a></li>
-            <li class="l-header__nav-list-item">
-              <a href="#skills">Skills</a>
-            </li>
-            <li class="l-header__nav-list-item">
-              <a href="#products">Products</a>
-            </li>
-            <li class="l-header__nav-list-item">
-              <a href="#contact">Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <!-- .l-header__inner -->
-    </header>
-
     <main class="l-main p-index">
-      <div class="p-index-header">
-        <figure class="p-index-header__img">
-          <img src="/assets/img/images/header-bg.png" />
-        </figure>
-      </div>
-
-      <section id="about" class="l-section p-index-about">
-        <div class="c-mainTitle">
-          <h2 class="c-mainTitle__text">About</h2>
-        </div>
-        <!-- .c-mainTitle -->
-
-        <div class="p-index-about__profile">
-          <figure class="p-index-about__profile-img-wrap">
-            <img
-              class="p-index-about__profile-img"
-              src="/assets/img/images/profile.jpg"
-            />
-          </figure>
-          <div class="p-index-about__profile-text">
-            <p>エンジニアを目指して勉強中の24歳です。</p>
-            <p>
-              出身は福島県で、育ちは岩手県、大学時代は宮城県仙台市で過ごしました。新しいことを学ぶことが大好きで、常にわくわくできるものを探しています。
-            </p>
-            <p>
-              趣味は書道と展覧会巡り、たくさん食べることです。特にラーメンが大好きで、休日は美術館とラーメン屋を巡ることが多いです。<br />
-              githubとQiitaアカウントあります。気になる方は右のアイコンからどうぞ！
-            </p>
-          </div>
-          <!-- .p-index-about__profile-text -->
-        </div>
-        <!-- .p-index-about__profile -->
-        <figure class="p-index-about__icons">
-          <a href="https://github.com/kobarihirono" target="_blank"
-            ><img class="c-socialIcon" src="/assets/img/icon/Github.png"
-          /></a>
-          <a href="https://qiita.com/kobari_h" target="_blank"
-            ><img class="c-socialIcon" src="/assets/img/icon/Qiita.png"
-          /></a>
-        </figure>
-      </section>
-
-      <section id="skills" class="l-section p-index-skills">
-        <div class="c-mainTitle">
-          <h2 class="c-mainTitle__text">Skills</h2>
-        </div>
-
-        <p class="p-index-skills__text">
-          主にフロントエンドを学習しています。<br />
-          以下は現在勉強中、あるいは実務で使用したことのある技術一覧です。
-        </p>
-
-        <div class="p-index-skills__cards">
-          <!-- .c-mainTitle -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">HTML</p>
-            <figure class="c-skillCard__img-wrap">
-              <img class="c-skillCard__img" src="/assets/img/icon/html.png" />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">CSS</p>
-            <figure class="c-skillCard__img-wrap">
-              <img class="c-skillCard__img" src="/assets/img/icon/css.png" />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">Javascript</p>
-            <figure class="c-skillCard__img-wrap">
-              <img
-                class="c-skillCard__img"
-                src="/assets/img/icon/javascript.png"
-              />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">jQuery</p>
-            <figure class="c-skillCard__img-wrap">
-              <img class="c-skillCard__img" src="/assets/img/icon/jquery.png" />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">Typescript</p>
-            <figure class="c-skillCard__img-wrap">
-              <img
-                class="c-skillCard__img"
-                src="/assets/img/icon/typescript.png"
-              />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">React</p>
-            <figure class="c-skillCard__img-wrap">
-              <img class="c-skillCard__img" src="/assets/img/icon/react.png" />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">WordPress</p>
-            <figure class="c-skillCard__img-wrap">
-              <img
-                class="c-skillCard__img"
-                src="/assets/img/icon/wordpress.png"
-              />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-          <div class="c-skillCard">
-            <p class="c-skillCard__title">PHP</p>
-            <figure class="c-skillCard__img-wrap">
-              <img class="c-skillCard__img" src="/assets/img/icon/php.png" />
-            </figure>
-          </div>
-          <!-- .c-skillCard -->
-        </div>
-        <!-- .p-index-skills__cards -->
-      </section>
-
-      <section id="products" class="l-section p-index-products">
-        <div class="c-mainTitle">
-          <h2 class="c-mainTitle__text">Products</h2>
-        </div>
-
-        <div class="p-index-products__cards">
-          <div class="c-productCard">
-            <a href="#" class="c-productCard__link">
-              <figure class="c-productCard__img-wrap">
-                <img
-                  class="c-productCard__img"
-                  src="/assets/img/images/fictitious_hp.png"
-                />
-              </figure>
-              <div class="c-productCard__context">
-                <p class="c-productCard__context-title">
-                  架空のコーポレートサイト
-                </p>
-                <p class="c-productCard__context-skill">
-                  使用技術 : HTML,SCSS,jQuery
-                </p>
-              </div>
-              <!-- .c-productCard__context -->
-            </a>
-          </div>
-          <!-- .c-productCard -->
-          <div class="c-productCard">
-            <a href="#" class="c-productCard__link">
-              <figure class="c-productCard__img-wrap">
-                <img
-                  class="c-productCard__img"
-                  src="/assets/img/images/threeJs.png"
-                />
-              </figure>
-              <div class="c-productCard__context">
-                <p class="c-productCard__context-title">Three.jsで遊ぼう</p>
-                <p class="c-productCard__context-skill">
-                  使用技術 : HTML,CSS,Javascript,Three.js
-                </p>
-              </div>
-              <!-- .c-productCard__context -->
-            </a>
-          </div>
-          <!-- .c-productCard -->
-          <div class="c-productCard">
-            <a href="#" class="c-productCard__link">
-              <figure class="c-productCard__img-wrap">
-                <img
-                  class="c-productCard__img"
-                  src="/assets/img/images/productComming.png"
-                />
-              </figure>
-              <div class="c-productCard__context">
-                <p class="c-productCard__context-title">My 図書管理アプリ</p>
-                <p class="c-productCard__context-skill">使用技術 : HTML,MUI,Next.js,supabase,Vercel</p>
-              </div>
-              <!-- .c-productCard__context -->
-            </a>
-          </div>
-          <!-- .c-productCard -->
-        </div>
-        <!-- .p-index-products__cards -->
-      </section>
-
       <section id="contact" class="l-section p-index-contact">
         <div class="c-mainTitle">
           <h2 class="c-mainTitle__text">Contact</h2>
@@ -300,21 +85,7 @@
 
           <input type="hidden" name="code" value="utf8" />
         </form>
-
-        <div class="p-index-contact__context">
-          <p>
-            お問い合わせフォームに不具合がある場合には、お手数ですが以下のメールアドレスまでご連絡をお願いいたします。
-          </p>
-          <p class="p-index-contact__context-mail">
-            mail: k.hirono0127@gmail.com
-          </p>
-        </div>
       </section>
     </main>
-    <footer class="l-footer">
-      <div class="l-footer__inner">
-        <p class="l-footer__copy-text">&copy; 2024 Portfolio by kobari</p>
-      </div>
-    </footer>
   </body>
 </html>
