--- a/products/corporate.html
+++ b/products/corporate.html
@@ -6,49 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/assets/img/icon/icon.png"
-      sizes="192x192"
-    />
-    <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
-  <body class="l-body">
-    <header class="l-header">
-      <div class="l-header__inner">
-        <a href="/" class="l-header__logo">
-          <img src="/assets/img/logo/logo.png" />
-        </a>
-        <nav class="l-header__nav">
-          <ul class="l-header__nav-list">
-            <li class="l-header__nav-list-item"><a href="#about">About</a></li>
-            <li class="l-header__nav-list-item">
-              <a href="#skills">Skills</a>
-            </li>
-            <li class="l-header__nav-list-item">
-              <a href="#products">Products</a>
-            </li>
-            <li class="l-header__nav-list-item">
-              <a href="#contact">Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <!-- .l-header__inner -->
-    </header>
-
-    <main class="l-main p-index"></main>
-
-    <footer class="l-footer">
-      <div class="l-footer__inner">
-        <p class="l-footer__copy-text">&copy; 2024 Portfolio by kobari</p>
-      </div>
-    </footer>
-  </body>
+  <body></body>
 </html>
