--- a/completed.html
+++ b/completed.html
@@ -6,28 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/assets/img/icon/icon.png"
-      sizes="192x192"
-    />
-    <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
-  <body class="l-body">
-    <div class="p-completed">
-      <h1 class="p-completed__title">お問い合わせ完了</h1>
-      <p class="p-completed__text">
-        お問い合わせ内容の送信が完了しました。<br />
-        内容を確認の上、ご返信させていただきますのでお待ちください。
-      </p>
-      <a href="/" class="c-button p-completed__button">トップに戻る</a>
-    </div>
-    <!-- .p-completed -->
-  </body>
+  <body></body>
 </html>
