--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
     <title>My Portfolio</title>
   </head>
   <body class="l-body">
+    <header class="l-header">
+      <a href="/" class="l-header__logo">
+        <img src="/assets/img/logo/logo.png" />
+      </a>
+      <nav class="l-header__nav">
+        <ul class="l-header__nav-list">
+          <li><a href="">ABOUT</a></li>
+          <li><a href="">PRODUCT</a></li>
+          <li><a href="">CONTACT</a></li>
+        </ul>
+        <ul class="l-header__nav-icons">
+          <li>
+            <a href="https://github.com/kobarihirono"
+              ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+            /></a>
+          </li>
+          <li>
+            <a href="https://qiita.com/kobari_h"
+              ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main class="l-main p-index">
       <section id="contact" class="l-section p-index-contact">
         <div class="c-mainTitle">
@@ -87,5 +111,24 @@
         </form>
       </section>
     </main>
+
+    <footer class="l-footer">
+      <div class="l-footer__inner">
+      <a href="/" class="l-footer__logo">
+        <figure>
+          <img src="/assets/img/logo/logo.png" />
+        </figure>
+        <p>Hirono Kobari Portfolio</p>
+      </a>
+      <nav class="l-footer__nav">
+        <ul class="l-footer__nav-list">
+          <li><a href="">ABOUT</a></li>
+          <li><a href="">PRODUCT</a></li>
+          <li><a href="">CONTACT</a></li>
+        </ul>
+      </nav>
+      </div>
+      <p class="l-footer__copy">&copy; 2024 hirono kobari. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
