--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="l-header__nav-list">
           <li><a href="">ABOUT</a></li>
           <li><a href="">PRODUCT</a></li>
-          <li><a href="">CONTACT</a></li>
+          <li><a href="#contact">CONTACT</a></li>
         </ul>
         <ul class="l-header__nav-icons">
           <li>
@@ -40,11 +40,30 @@
       </nav>
     </header>
     <main class="l-main p-index">
-      <section id="contact" class="l-section p-index-contact">
-        <div class="c-mainTitle">
-          <h2 class="c-mainTitle__text">Contact</h2>
+      <section>
+        <div class="c-title">
+          <h2 class="c-title__main">ABOUT</h2>
+          <p class="c-title__sub">私について</p>
         </div>
-
+      </section>
+      <section>
+        <div class="c-title">
+          <h2 class="c-title__main">PRODUCT</h2>
+          <p class="c-title__sub">制作物</p>
+        </div>
+        <div class="c-productCard">
+          <figure class="c-productCard__img">
+            <img src="/assets/img/images/productComming.png" />
+          </figure>
+          <p class="c-productCard__title">プロダクト名</p>
+          <p class="c-productCard__skill">HTML | CSS | Javascript</p>
+        </div>
+      </section>
+      <section id="contact" class="l-section p-index-contact">
+        <div class="c-title">
+          <h2 class="c-title__main">CONTACT</h2>
+          <p class="c-title__sub">お問い合わせ</p>
+        </div>
         <form
           action="https://ssl.form-mailer.jp/fm/service/Forms/confirm"
           method="post"
@@ -98,37 +117,33 @@
             ></textarea>
           </p>
 
-          <p class="p-form__button">
-            <input
-              class="c-button"
-              name="submit"
-              type="submit"
-              value="送信する"
-            />
-          </p>
+          <button type="submit" class="c-button">Send</button>
 
           <input type="hidden" name="code" value="utf8" />
         </form>
       </section>
+      <a href="#" class="c-scrollup"><span>top</span></a>
     </main>
 
     <footer class="l-footer">
       <div class="l-footer__inner">
-      <a href="/" class="l-footer__logo">
-        <figure>
-          <img src="/assets/img/logo/logo.png" />
-        </figure>
-        <p>Hirono Kobari Portfolio</p>
-      </a>
-      <nav class="l-footer__nav">
-        <ul class="l-footer__nav-list">
-          <li><a href="">ABOUT</a></li>
-          <li><a href="">PRODUCT</a></li>
-          <li><a href="">CONTACT</a></li>
-        </ul>
-      </nav>
+        <a href="/" class="l-footer__logo">
+          <figure>
+            <img src="/assets/img/logo/logo.png" />
+          </figure>
+          <p>Hirono Kobari Portfolio</p>
+        </a>
+        <nav class="l-footer__nav">
+          <ul class="l-footer__nav-list">
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">PRODUCT</a></li>
+            <li><a href="">CONTACT</a></li>
+          </ul>
+        </nav>
       </div>
-      <p class="l-footer__copy">&copy; 2024 hirono kobari. All Rights Reserved.</p>
+      <p class="l-footer__copy">
+        &copy; 2024 hirono kobari. All Rights Reserved.
+      </p>
     </footer>
   </body>
 </html>
