--- a/products/corporate.html
+++ b/products/corporate.html
@@ -9,7 +9,56 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="" sizes="192x192" />
+    <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
-  <body></body>
+  <body class="l-body">
+    <header class="l-header">
+      <a href="/" class="l-header__logo">
+        <img src="/assets/img/logo/logo.png" />
+      </a>
+      <nav class="l-header__nav">
+        <ul class="l-header__nav-list">
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#product">PRODUCT</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+        <ul class="l-header__nav-icons">
+          <li>
+            <a href="https://github.com/kobarihirono"
+              ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+            /></a>
+          </li>
+          <li>
+            <a href="https://qiita.com/kobari_h"
+              ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer class="l-footer">
+      <div class="l-footer__inner">
+        <a href="/" class="l-footer__logo">
+          <figure>
+            <img src="/assets/img/logo/logo.png" />
+          </figure>
+          <p>Hirono Kobari Portfolio</p>
+        </a>
+        <nav class="l-footer__nav">
+          <ul class="l-footer__nav-list">
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">PRODUCT</a></li>
+            <li><a href="">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="l-footer__copy">
+        &copy; 2024 hirono kobari. All Rights Reserved.
+      </p>
+    </footer>
+  </body>
 </html>
