--- a/about.html
+++ b/about.html
@@ -39,7 +39,79 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="p-about-about">
+        <div class="c-title">
+          <h2 class="c-title__main">ABOUT</h2>
+          <p class="c-title__sub">私について</p>
+        </div>
+        <div>
+          <p>エンジニアを目指して勉強中の24歳です。</p>
+          <p>
+            出身は福島県で、育ちは岩手県、大学時代は宮城県仙台市で過ごしました。新しいことを学ぶことが大好きで、常にわくわくできるものを探しています。
+          </p>
+          <p>
+            趣味は書道と展覧会巡り、たくさん食べることです。特にラーメンが大好きで、休日は美術館とラーメン屋を巡ることが多いです。
+          </p>
+        </div>
+        <figure class="p-about-header">
+          <img src="/assets/img/images/about.png" />
+        </figure>
+      </section>
+
+      <section>
+        <div class="c-title">
+          <h2 class="c-title__main">SKILL</h2>
+          <p class="c-title__sub">学習していること</p>
+        </div>
+        <figure class="p-about-skill">
+          <img src="/assets/img/images/skill.png" />
+        </figure>
+        <div>
+          <p>フロントエンドを中心に学習しています。</p>
+          <p>CSSとJavascriptが好きです。</p>
+          <ul>
+            <li>言語：HTML. CSS SCSS Javascript Typescript PHP SQL</li>
+            <li>ライブラリ：React MUI</li>
+            <li>フレームワーク：jQuery Next.js Laravel</li>
+            <li>CMS：WordPress</li>
+            <li>デザインツール：figma</li>
+          </ul>
+        </div>
+      </section>
+
+      <section>
+        <div class="c-title">
+          <h2 class="c-title__main">CAREER</h2>
+          <p class="c-title__sub">今までのこと</p>
+        </div>
+        <ol>
+          <li>2018/03</li>
+          <li>2022/03</li>
+          <li>2022/12</li>
+          <li>2023/06</li>
+          <li>現在</li>
+        </ol>
+        <ol>
+          <li>
+            岩手県立水沢高等学校を卒業。大学進学のため宮城県仙台市に移住。
+          </li>
+          <li>
+            大学では植物遺伝学を専攻し、研究に励む。四年次には東北植物学会で入賞。<br />
+            宮城大学・食産業学群・食資源開発学類卒業後、就職のため埼玉県に移住。
+          </li>
+          <li>
+            WebGLに興味を持ち、Three.jsライブラリを使うとJavaScriptの知識だけで3Dコンテンツを作成できることを知る。
+            自分で何か作ってみたいと思い、プログラミング学習を始める。
+          </li>
+          <li>エンジニアになるべく、現在の会社に入社。</li>
+          <li>
+            フロントエンドエンジニアの研修を受講。<br />
+            現在は案件先への配属前の待機中、受託業務に従事。Web制作の実装/テストを担当する。
+          </li>
+        </ol>
+      </section>
+    </main>
     <footer class="l-footer">
       <div class="l-footer__inner">
         <a href="/" class="l-footer__logo">
