--- a/completed.html
+++ b/completed.html
@@ -39,7 +39,18 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="c-title">
+        <h2 class="c-title__main">Completed</h2>
+        <p class="c-title__sub">完了</p>
+      </div>
+      <!-- .c-title -->
+      <div>
+        <p>お問い合わせ内容の送信が完了しました。</p>
+        <p>内容を確認の上、ご返信させていただきますのでお待ちください。</p>
+      </div>
+      <a href="/"><button class="c-button">Back</button></a>
+    </main>
     <footer class="l-footer">
       <div class="l-footer__inner">
         <a href="/" class="l-footer__logo">
