--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
           <!-- .c-productCard -->
           <div class="c-productCard">
-            <a href="" class="c-productCard__img">
+            <a href="#" class="c-productCard__img">
               <img src="/assets/img/images/dummy.png" />
             </a>
             <p class="c-productCard__title">Read Scale</p>
@@ -117,7 +117,7 @@
           </div>
           <!-- .c-productCard -->
           <div class="c-productCard">
-            <a href="products/corporate.html" class="c-productCard__img">
+            <a href="#" class="c-productCard__img">
               <img src="/assets/img/images/dummy.png" />
             </a>
             <p class="c-productCard__title">Coming soon...</p>
